@@ -1,0 +1,4 @@
+module Admin
+  class OrdersController < Admin::ApplicationController
+  end
+end
