@@ -1,20 +1,9 @@
 Rails.application.routes.draw do
   namespace :admin do
-    resources :customers
-    resources :products
-
-    DashboardManifest::DASHBOARDS.each do |resource_class|
-      resources(
-        resource_class,
-        controller: :application,
-        resource_class: resource_class,
-      )
+    DashboardManifest::DASHBOARDS.each do |dashboard_resource|
+      resources dashboard_resource
     end
 
-    root(
-      action: :index,
-      controller: :application,
-      resource_class: DashboardManifest::ROOT_DASHBOARD,
-    )
+    root controller: DashboardManifest::ROOT_DASHBOARD, action: :index
   end
 end
