@@ -1,3 +1,4 @@
+* Improvement: Generate resource-specific controller subclasses.
 * UI: Remove logo from the sidebar
 * Bug Fix: Fix an bug where `nil` in a string field would cause a 500 error.
 
@@ -12,6 +13,8 @@ New in 0.0.10:
 * Improvement: support lookup for models that have a custom `to_param` method.
 * Improvement: Truncate strings on index page,
   with an optional argument for truncation length
+* Improvement: Generate a single controller to serve all resources,
+  to reduce noise after running the install generator.
 * Improvement: Add `Administrate::Field::DateTime`
   for displaying dates, times, and datetimes.
 * Improvement: Add `Administrate::Field::Number`
